# exifer-tauri-sveltekit-app

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  svelte.config.js
src/: app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  extension.rs  file.rs  file_details.rs  location.rs  main.rs  menu.rs
src/lib/: locations.ts  storage.ts  tauri.ts
src/routes/: Locations.svelte  index.svelte
src/stores/: locations.ts
src/types/: ApplicationError.ts  Extension.ts  Location.ts
